# ContraBin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: finetune_poj104.yaml  finetune_summarization.yaml  pretrain.yaml  smoke.yaml
contrabin/: __init__.py  cli.py  config.py
contrabin/data/: __init__.py  comment_generator.py  compilation.py  datasets.py  loaders.py  triplet_builder.py
contrabin/evaluation/: __init__.py  metrics.py
contrabin/losses/: __init__.py  contrastive.py  intermediate.py
contrabin/models/: __init__.py  contrabin.py  encoders.py  heads.py  interpolation.py
contrabin/tasks/: __init__.py  binary_retrieval.py  compiler_provenance.py  name_recovery.py  summarization.py
contrabin/training/: __init__.py  callbacks.py  scheduler.py  trainer.py
contrabin/utils/: __init__.py  io.py  logging.py  seed.py  visualization.py
docs/: README.md  data.md  faq.md  method.md  tasks.md  training.md
examples/: pretrain_tiny.py  use_pretrained_embedding.py
notebooks/: 01_quickstart.ipynb
scripts/: build_triplets.sh  download_datasets.py  train_pretrain.sh
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_losses.py  test_metrics.py  test_models.py  test_tasks.py  test_training.py
